test/visibility/shadow-overload.good
shadow-overload.chpl:11: In method 'shadow':
shadow-overload.chpl:14: error: currently ambiguous what 'shadow' refers to
shadow-overload.chpl:11: note: found this method
shadow-overload.chpl:5: note: and this non-method
